@@ -41,4 +41,4 @@ resources:
   bugtracker: https://github.com/chocolateboy/App-Wax/issues
   license: http://dev.perl.org/licenses/
   repository: https://github.com/chocolateboy/App-Wax
-version: 1.0.0
+version: 1.0.1
