@@ -22,7 +22,7 @@ add support for HTTPS (and any other protocols supported by L<LWP>) to programs 
 
 =item *
 
-add a mirroring layer to network requests (remote resources are only fetched if they have been updated)
+add a mirroring layer to network requests (remote resources are only fetched if they've been updated)
 
 =item *
 
@@ -96,7 +96,11 @@ Print the version of wax.
 
 =head1 EXAMPLES
 
+=head2 grep
+
     $ wax grep -B1 demons http://www.mplayerhq.hu/DOCS/man/en/mplayer.1.txt
+
+=head2 espeak
 
     $ alias espeak="wax espeak"
     $ espeak -f http://www.setec.org/mel.txt
@@ -104,6 +108,8 @@ Print the version of wax.
 =head2 nman
 
     #!/bin/sh
+
+    # nman - Node.js man-page viewer
 
     node_version=${NODE_VERSION:-`node --version`}
     docroot="https://cdn.rawgit.com/joyent/node/$node_version-release/doc/api"
@@ -131,13 +137,13 @@ URLs e.g:
 
 =head1 VERSION
 
-1.0.0
+1.0.1
 
 =head1 SEE ALSO
 
 =over
 
-=item * L<rlwrap|http://utopia.knoware.nl/~hlub/uck/rlwrap/>
+=item * L<rlwrap|http://utopia.knoware.nl/~hlub/uck/rlwrap/#rlwrap>
 
 =item * L<sshfs|http://fuse.sourceforge.net/sshfs.html>
 
