@@ -197,7 +197,7 @@ None by default.
 
 =head1 VERSION
 
-1.0.0
+1.0.1
 
 =head1 SEE ALSO
 
